--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
-<!-- <app-header></app-header> -->
-<div>On master...</div>
+<app-header></app-header>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
