--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
+<div>Origin ahead of one commit</div>
 <!-- <app-header></app-header> -->
 <div>Stashing...</div>
 <div class="container">
