--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
 <app-header></app-header>
-<div>Origin ahead of one commit</div>
-<!-- <app-header></app-header> -->
-<div>Stashing...</div>
+<div>Cloned branch...</div>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
