--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div>Cloned branch...</div>
+<div>Shared branch...</div>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
