--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-BASE branch updated by Kevin
+BASE branch updated by Kevin (conflict)
 <div class="container">
   <div class="row">
     <div class="col-md-12">
