--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <app-header></app-header>
-BASE branch updated by Kevin (conflict)
-BASE branch updated by Kevin again
+Merging...
 <div class="container">
   <div class="row">
     <div class="col-md-12">
